gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-ffi_returns_twice.rs
#![crate_type = "lib"]

extern {
    #[ffi_returns_twice] // { dg-error ".E0658." "" { target *-*-* } }
    pub fn foo();
}

